* add fixed hight for window_container * add overflow:auto to #window-container

--- a/client/static/components/css/common.css
+++ b/client/static/components/css/common.css
@@ -54,6 +54,7 @@ html.drag {
 
 #window-container {
     height: 100%;
+    overflow: auto;
 }
 
 .hidden {
